Fixing grid layout for News and Music pages to be center aligned grid with left aligned items

--- a/src/components/Pages/Music/music.css
+++ b/src/components/Pages/Music/music.css
@@ -2,13 +2,17 @@
   margin-top: 24px;
   max-width: 1640px;
   margin: auto;
+  display: grid;
+  flex-wrap: wrap;
+  grid-template-columns: repeat(auto-fill, 326px);
+  justify-content: center;
+  align-content: flex-start;
 }
 
 .song {
   width: 300px;
   height: 320px;
   margin: 14px;
-  float: left;
 }
 
 .song-details {
