--- a/src/components/Pages/News/news.css
+++ b/src/components/Pages/News/news.css
@@ -3,6 +3,14 @@
   margin: auto;
 }
 
+.feed {
+  display: grid;
+  flex-wrap: wrap;
+  grid-template-columns: repeat(auto-fill, 326px);
+  justify-content: center;
+  align-content: flex-start;
+}
+
 .insta-media-container {
   width: 300px;
   height: 300px;
